--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,16 @@ android {
     dataBinding {
         enabled = true
     }
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '28.0.0'
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -32,4 +42,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor  'android.arch.persistence.room:compiler:1.1.1'
+    implementation "android.arch.work:work-firebase:1.0.0-alpha11"
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
