--- a/paging/build.gradle
+++ b/paging/build.gradle
@@ -1,23 +1,27 @@
 apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        applicationId "com.example.youcanrunsuccessfully"
+        applicationId "com.shxy.paging"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
-    }
+
     configurations.all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             def requested = details.requested
@@ -28,21 +32,20 @@ android {
             }
         }
     }
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor  'android.arch.persistence.room:compiler:1.1.1'
-    implementation "android.arch.work:work-firebase:1.0.0-alpha11"
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation "android.arch.paging:runtime:1.0.0"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
